tried kan for J2>0 Fourier

--- a/bit_transformations/different_functions.ipynb
+++ b/bit_transformations/different_functions.ipynb
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "2f692a17",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1771,7 @@
    ],
    "source": [
     "import libraries.magnetization as mag\n",
-    "mag.count_magnetization(4)"
+    "mag.count_magnetization(4)\n"
    ]
   },
   {
