--- a/J1J2_info/odd_MSR.ipynb
+++ b/J1J2_info/odd_MSR.ipynb
@@ -1952,7 +1952,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kans",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
