--- a/symbolic_regression/MSR_tanh.ipynb
+++ b/symbolic_regression/MSR_tanh.ipynb
@@ -1283,7 +1283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kans",
    "language": "python",
    "name": "python3"
   },
