--- a/J1J2_info/generate_n_10_12_gs.ipynb
+++ b/J1J2_info/generate_n_10_12_gs.ipynb
@@ -192,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kans",
    "language": "python",
    "name": "python3"
   },
