--- a/SR_J2_finite/deviation_network.ipynb
+++ b/SR_J2_finite/deviation_network.ipynb
@@ -658,7 +658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kans",
    "language": "python",
    "name": "python3"
   },
