testing different bit inputs (mostly DFT) and using KAN to try to train MSR + small deviations from them

--- a/bit_transformations/different_functions.ipynb
+++ b/bit_transformations/different_functions.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "25eb4445",
    "metadata": {},
    "outputs": [],
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "a1986297",
    "metadata": {},
    "outputs": [],
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "06130618",
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "0566fcf4",
    "metadata": {},
    "outputs": [],
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "1ace63c3",
    "metadata": {},
    "outputs": [
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "ec708ee8",
    "metadata": {},
    "outputs": [
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "029bdb2b",
    "metadata": {},
    "outputs": [
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "57a43371",
    "metadata": {},
    "outputs": [
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "b74c8bf9",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "0a0a72bf",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "e4ab57b0",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "01705f41",
    "metadata": {},
    "outputs": [
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "1150422b",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "1914a5be",
    "metadata": {},
    "outputs": [
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "6be2865c",
    "metadata": {},
    "outputs": [
@@ -1721,7 +1721,7 @@
        "[]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "eecdf64f",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1743,7 @@
        "  array([0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1]))]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2f692a17",
    "metadata": {},
    "outputs": [
@@ -1764,7 +1764,7 @@
        "1"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,14 +1776,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
+   "id": "a38bdc00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(6)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup_to_int([0, 1, 1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "3e6fc0a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def tup_to_int(x):\n",
     "    x = np.array(x)\n",
-    "    return (x * (2 ** np.arange(len(x)))).sum()\n",
+    "    return int((x * (2 ** np.arange(len(x)))).sum())\n",
     "def check_symmetries(L, f):\n",
     "\n",
     "    visited = set()\n",
@@ -1807,12 +1828,48 @@
     "                if not np.allclose(transform[0], transform[i]):\n",
     "                    collisions.add((y_equiv[i], y_equiv[0]))\n",
     "\n",
+    "    return collisions\n",
+    "\n",
+    "def gen_equiv(N, x):\n",
+    "    y = utils.generate_state_1D(N, x)\n",
+    "    y_equiv = {\n",
+    "        tuple(np.roll(y, r)) for r in range(L)\n",
+    "    }.union({\n",
+    "        tuple(np.roll(y[::-1], r)) for r in range(L)\n",
+    "    }).union({\n",
+    "        tuple(np.roll(1-y, r)) for r in range(L)\n",
+    "    }).union({\n",
+    "        tuple(np.roll((1-y)[::-1], r)) for r in range(L)\n",
+    "    })\n",
+    "    return y_equiv\n",
+    "\n",
+    "def check_states(L, gs, threshold = 1e-10):\n",
+    "    visited = set()\n",
+    "    collisions = set()\n",
+    "    for state in range(2**L):\n",
+    "        if state not in visited and mag.count_magnetization(state) == L//2:\n",
+    "            y = utils.generate_state_1D(state, L)\n",
+    "            y_equiv = {\n",
+    "                tuple(np.roll(y, r)) for r in range(L)\n",
+    "            }.union({\n",
+    "                tuple(np.roll(y[::-1], r)) for r in range(L)\n",
+    "            }).union({\n",
+    "                tuple(np.roll(1-y, r)) for r in range(L)\n",
+    "            }).union({\n",
+    "                tuple(np.roll((1-y)[::-1], r)) for r in range(L)\n",
+    "            })\n",
+    "            visited.update(set(tup_to_int(x) for x in y_equiv))\n",
+    "            y_equiv = list(y_equiv)\n",
+    "            for i in range(len(y_equiv)):\n",
+    "                #print(tup_to_int(y_equiv[i]), tup_to_int(y_equiv[0]))\n",
+    "                if abs(abs(gs[tup_to_int(y_equiv[i])][0]) - abs(gs[tup_to_int(y_equiv[0])][0])) >= threshold:\n",
+    "                    collisions.add((y_equiv[i], y_equiv[0]))\n",
     "    return collisions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 23,
    "id": "6b12fad2",
    "metadata": {},
    "outputs": [
@@ -2589,7 +2646,7 @@
        "   np.float64(0.0)))}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2600,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "id": "5cc728c3",
    "metadata": {},
    "outputs": [
@@ -2610,7 +2667,7 @@
        "array([0., 4., 0., 2., 0., 4.])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "id": "18e9a588",
    "metadata": {},
    "outputs": [
@@ -2631,7 +2688,7 @@
        "array([0., 4., 0., 2., 0., 4.])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2642,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 77,
    "id": "a1cb4d74",
    "metadata": {},
    "outputs": [
@@ -2659,7 +2716,7 @@
        "set()"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2668,6 +2725,137 @@
     "symms = check_symmetries(16, lambda x : np.abs(np.fft.rfft((-1) ** np.array(x)))) # seems no issues up to N=16\n",
     "print(len(symms))\n",
     "symms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d248c743",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{15: 8, 23: 8, 27: 8, 29: 8, 39: 8, 43: 8, 45: 8, 51: 4, 53: 8, 85: 2}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utils.find_uniques([n for n in range(2**8) if mag.count_magnetization(n) == 4], 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c3f8f70f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b110011'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(51)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d547fac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31, 992)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0b0000011111, 0b1111100000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea0ee166",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import qutip as qt\n",
+    "L=14\n",
+    "#gs = j1j2.J1J2_hamiltonian(L, 1, 0).eigenstates()[1][0]\n",
+    "gs = qt.qload(f'../J1J2_info/N{L}/n{L}gs_J2_{0.0}')\n",
+    "collisions = check_states(L, gs)\n",
+    "print(len(collisions))\n",
+    "collisions\n",
+    "# NOTE SYMMETRY ONLY MEANS THAT |psi^2| IS THE SAME, THERE COULD BE PHASE DIFFERENT \n",
+    "# there is no phase difference for N%4=0, but there is for N%4=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "96581cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.0004815+0.j]), array([-0.0004815-0.j]))"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs[31], gs[992]"
    ]
   },
   {
@@ -2883,7 +3071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
