--- a/bit_transformations/kan_nz_J2.ipynb
+++ b/bit_transformations/kan_nz_J2.ipynb
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "66bb6e3a",
    "metadata": {},
    "outputs": [],
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "id": "7b65e4b2",
    "metadata": {},
    "outputs": [
@@ -993,6 +993,17 @@
       "1.5890709161758423\n",
       "1.5890709161758423\n",
       "1.5890709161758423\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -1056,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
