--- a/bit_transformations/transformation_nn.ipynb
+++ b/bit_transformations/transformation_nn.ipynb
@@ -1052,6 +1052,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4d32dedb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "id": "6ffeb6fe",
    "metadata": {},
@@ -1856,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "4c253b7e",
    "metadata": {},
    "outputs": [
@@ -1880,6 +1888,17 @@
      "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
