generating J2>0.5 and testing deviation from MSR based on amplitude^2

--- a/J1J2_info/MSR_violations.ipynb
+++ b/J1J2_info/MSR_violations.ipynb
@@ -739,6 +739,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "69ceac8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qt.qload(f'N{8}/n{8}gs_J2_{round(0.25, 3)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "34b8641a",
    "metadata": {},
@@ -840,6 +850,27 @@
    ],
    "source": [
     "find_uniques(dev_data_8[8, 0.495], 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "40d0bee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 30, 60, 120, 135, 195, 225, 240]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dev_data_8[8, 0.26]"
    ]
   },
   {
@@ -1852,7 +1883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
